# infer

infer/src/atlas/: Atlas.ml  Atlas.mli  AtlasAstral.ml  AtlasDomain.ml  AtlasDomain.mli  AtlasFormula.ml  AtlasState.ml  AtlasTransfer.ml  AtlasTransfer2.ml  NOTICE  README.md  dune
infer/src/atlas/tests/: 01_malloc_free_basic.c  02_malloc_store_load.c  03_double_free.c  04_use_after_free.c  05_free_non_base_pointer.c  06_struct_field_access.c  07_array_access.c  08_pointer_alias.c  09_formal_pointer_deref.c  10_formal_pointer_free.c  11_unallocated_deref.c  12_store_load_int.c  13_pointer_offset_deref.c  14_out_of_bounds_access.c  15_negative_offset_access.c  16_multiple_store_same_cell.c  17_formal_struct_field.c  18_malloc_zero_size.c  19_store_pointer_value.c  20_boundary_access.c  21_self_referential_pointer.c  22_queue_enqueue.c  23_queue_dequeue.c  24_queue_destroy.c  25_dll_insert_head.c  26_btree_set_left.c  27_swap_data.c  28_buf_mem_new.c  29_conn_ctx_new.c  30_cell_id_join.c  31_formal_self_ref_offset_free.c  32_astral_easy.c  33_astral_mid.c  34_astral_hard.c  35_memcpy_local.c  36_memcpy_formal.c  37_memcpy_edge.c  38_ptrarith.c  39_ptrsub.c  40_symbolic_size.c  (+9 more)
infer/src/base/: Config.ml  Config.mli  IssueType.ml  IssueType.mli
