; Copyright (c) 2026 Ján Durec
;
; Licensed under the Apache License, Version 2.0 (the "License");
; you may not use this file except in compliance with the License.
; You may obtain a copy of the License at
;
;     http://www.apache.org/licenses/LICENSE-2.0
;
; Unless required by applicable law or agreed to in writing, software
; distributed under the License is distributed on an "AS IS" BASIS,
; WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
; See the License for the specific language governing permissions and
; limitations under the License.

(library
 (name Atlas)
 (public_name infer.Atlas)
 (flags
  (:standard
   -w -23-27
   -open
   Core
   -open
   OpenSource
   -open
   IR
   -open
   IStdlib
   -open
   IStd
   -open
   ATDGenerated
   -open
   IBase
   -open
   Absint
   -open
   BO
   -open
   Pulselib
   -open
   Ppx_yojson_conv_lib.Yojson_conv.Primitives))
 (libraries
  base64
  core
  ocamlgraph
  IStdlib
  ATDGenerated
  IBase
  IR
  Absint
  BO
  Pulselib
  astral)
 (preprocess
  (pps
   ppx_compare
   ppx_hash
   ppx_fields_conv
   ppx_sexp_conv
   ppx_variants_conv
   ppx_yojson_conv)))


